--- a/css/normalize.css
+++ b/css/normalize.css
@@ -116,6 +116,7 @@
 
   div a:hover {
     background: no-repeat;
+    background-size: contain;
     text-shadow: 0 0 4px black;
     max-width: 20rem;
   }
@@ -290,6 +291,7 @@
     border-style: none;
     width: 100%;
     padding: 2rem;
+    
   }
   
   /**
